# Telegram_PlansBot

./: .gitignore  README.md  pyproject.toml
src/: bot.py  config.py  logger.py  loggers.py
